# libsextractor

./: .gitignore  Makefile.am  README  README.libsex  README.libsextractor  configure.ac  sex.pc.in  sextractor-2.4.4-poloka.patch  sextractor.pc.in
man/: Makefile.am  sexmain.1.in
src/: Makefile.am  analyse.c  back.c  check.c  prefs.h  scan.c  types.h
src/fits/: Makefile.am  fitscat.c  fitscat.h  fitsmisc.c
src/wcs/: Makefile.am  cel.c  cel.h  lin.c  lin.h  proj.c  proj.h  sph.c  sph.h  wcs.c  wcs.h  wcsmath.h  wcstrig.c  wcstrig.h
